# fastprof

./: .gitignore  .gitlab-ci.yml  README.md  fast_sampling.py  fastprof.py  pyproject.toml  sampling.py  setup-env.sh  setup.cfg  setup.py  setup.sh
doc/: Makefile  README.md  code.rst  conf.py  index.rst  introduction.rst  limits.rst  make_doc.sh  markup.rst  model.rst  setup.rst  stat.rst  tutorials.rst  utilities.rst
doc/scripts/: check_model.rst  collect_results.rst  compute_fast_limits.rst  compute_limits.rst  convert_pyhf.rst  convert_pyhf_json.rst  convert_ws.rst  dump_debug.rst  dump_samples.rst  fit_fast.rst  fit_model.rst  fit_ws.rst  merge_channels.rst  merge_models.rst  plot.rst  plot_impacts.rst  plot_valid.rst  poi_scan.rst  print_model.rst  prune_model.rst  reparam_model.rst
docs/: Makefile
docs/source/: code.rst  conf.py  index.rst  limits.rst  model.rst
examples/: README.md  counting_with_syst.json  counting_with_syst_n1.json  dump_samples.py  evaluate_plr.py  high_stats_one_bin.json  high_stats_two_bins.json  multi_channel-4_regions.json  multi_channel.json  multi_channel_scan_data.json  poisson_bkg_unc.json  sampling_limits.py  sampling_limits_simple.py  simple_2poi_gaussian.json  simple_bkg_uncertainty.json  simple_counting.json  simple_counting_n1.json  simple_gaussian.json  single_bin.json  single_gaussian.json  test.py  test_fast.py  test_fast_inspect.py  test_fast_simple.py  test_fast_simple_ref.py  test_inspect.py  test_sampling.py  testprof.py  toy.py  trileptons.sh
fastprof/: __init__.py  base.py  calculators.py  channels.py  core.py  elements.py  fit_data.py  minimizers.py  model_tools.py  newcore.py  norms.py  sample.py  samplers.py  sampling.py  scans.py  test_statistics.py  tools.py
fastprof_import/: convert_pyhf.py
fastprof_utils/: compute_fast_limits.py  dump_debug.py  poi_scan.py  reparam.py
import/: __init__.py
models/: highMass-1164.json  test1.json  test2.json
packaging/: build_package.sh  setup.cfg
root_import/: convert_pyhf.py  convert_ws.py  fit_ws.py  inspect_ws.py  tools.py
run/: .gitignore  check_model.py  collect_results.py  compute_limits.py  convert_ws.py  dump_debug.py  dump_samples.py  fit_fast.py  fit_model.py  fit_ws.py  iterate.py  plot.py  plot_valid.py
run/models/: test3.json
src/fastprof/: __init__.py  base.py  calculators.py  channels.py  core.py  expressions.py  fit_data.py  minimizers.py  model_tools.py  norms.py  plot_tools.py  print_tools.py  sample.py  samplers.py  sampling.py  scans.py  test_statistics.py
src/fastprof_import/: convert_pyhf.py  convert_pyhf_json.py  convert_ws.py  fit_ws.py  import_snapshot.py  inspect_ws.py  (+1 more)
testing/: limit_guess.py  plot.py  sampling_full.sh  test_fastprof.py  test_fasttoy.py  test_pyhf.py  test_qtilda.py  test_sample_gen.py  test_sampling.py  test_single_hypo.py  test_unbinned.py  test_unbinned_gammas.py  test_unbinned_gen.py  test_unbinned_toy.py
utils/: __init__.py  benchmark.sh  benchmark_unbinned.sh  check_asymptotics.py  check_model.py  collect_results.py  compute_fast_limits.py  compute_limits.py  convert_ws.py  dump_debug.py  dump_samples.py  fit_fast.py  fit_ws.py  iterate.py  make_inputs.py  make_inputs.sh  make_limits.py  merge_models.py  plot.py  plot_valid.py  poi_scan.py  reparam.py  submit_limit.py  tools.py  workspace_tools.py
(+1619 files in other folders)
