[metadata]
name = fastprof
version = 0.3.3
author = N. Berger
author_email = nberger@mail.cern.ch
description = 'A fast profiling tool for likelihood-based statistical analyses'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fastprof-hep/fastprof
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
  numpy>=1.19.5
  scipy>=1.5.0
  pandas>=1.1.0
  matplotlib>=3.3.3
  sphinx-rtd-theme>=0.5.1
  sphinx-argparse>=0.2.5
  mock>=4.0.3
  PyYAML>=5.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
   convert_pyhf_json.py    = fastprof_import.convert_pyhf_json:run
   convert_pyhf.py         = fastprof_import.convert_pyhf:run
   convert_ws.py           = fastprof_import.convert_ws:run
   fit_ws.py               = fastprof_import.fit_ws:run
   plot.py                 = fastprof_utils.plot:run
   plot_valid.py           = fastprof_utils.plot_valid:run
   check_model.py          = fastprof_utils.check_model:run
   fit_model.py            = fastprof_utils.fit_model:run
   make_inputs.py          = fastprof_utils.make_inputs:run
   merge_models.py         = fastprof_utils.merge_models:run
   merge_channels.py       = fastprof_utils.merge_channels:run
   prune_model.py          = fastprof_utils.prune_model:run
   compute_limits.py       = fastprof_utils.compute_limits:run
   compute_fast_limits.py  = fastprof_utils.compute_fast_limits:run
   dump_samples.py         = fastprof_utils.dump_samples:run
   iterate.py              = fastprof_utils.iterate:run
   collect_results.py      = fastprof_utils.collect_results:run
   poi_scan.py             = fastprof_utils.poi_scan:run
   reparam.py              = fastprof_utils.reparam:run
   print_model.py          = fastprof_utils.print_model:run
